--- a/browsabler/index.html
+++ b/browsabler/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <div class="top-section">
-        <img src="path_to_your_logo.png" alt="Browsabler Logo">
+        <img src="browsabler.png" alt="Browsabler Logo">
         <h1>Browsabler</h1>
     </div>
 
