--- a/browsabler/index.html
+++ b/browsabler/index.html
@@ -76,8 +76,8 @@
     </div>
 
     <nav>
-        <a href="privacy-policy">Privacy Policy</a>
-        <a href="terms-conditions">Terms & Conditions</a>
+        <a href="privacypolicy">Privacy Policy</a>
+        <a href="termsandconditions">Terms & Conditions</a>
     </nav>
 
     <header>
