--- a/browsabler/index.html
+++ b/browsabler/index.html
@@ -2,65 +2,20 @@
 <html>
 <head>
     <title>Browsabler Project</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-            color: #333;
-        }
-
-        .top-section {
-            background: #f4f4f4;
-            padding: 20px;
-            text-align: center;
-        }
-
         .top-section img {
             max-width: 100px; /* Adjust as needed */
             height: auto;
-        }
-
-        nav {
-            background: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-        }
-
-        nav a {
-            color: #fff;
-            margin: 0 10px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        header {
-            padding: 20px 0;
-            text-align: center;
-        }
-
-        header h1 {
-            margin: 0;
-        }
-
-        section {
-            padding: 20px;
-            border-bottom: 1px solid #ddd;
-        }
-
-        section:last-child {
-            border-bottom: none;
         }
 
         footer {
             background: #f4f4f4;
             text-align: center;
             padding: 10px 0;
-            position: fixed;
-            left: 0;
-            bottom: 0;
+            position: relative; /* Changed from 'fixed' to 'relative' for better layout with Bootstrap */
             width: 100%;
         }
 
@@ -70,32 +25,43 @@
     </style>
 </head>
 <body>
-    <div class="top-section">
-        <img src="browsabler.png" alt="Browsabler Logo"> <!-- Replace 'logo.png' with your actual logo file -->
-        <h1>Browsabler</h1>
-    </div>
-
-    <nav>
-        <a href="privacypolicy">Privacy Policy</a>
-        <a href="termsandconditions">Terms & Conditions</a>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="browsabler" alt="Browsabler Logo" style="max-width: 30px; height: auto;"> Browsabler
+        </a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="#privacypolicy">Privacy Policy</a></li>
+                <li class="nav-item"><a class="nav-link" href="#termsandconditions">Terms & Conditions</a></li>
+            </ul>
+        </div>
     </nav>
 
-    <header>
-        <h1>Welcome to Browsabler</h1>
-    </header>
+    <div class="container mt-4">
+        <header class="text-center">
+            <h1>Welcome to Browsabler</h1>
+        </header>
 
-    <section id="about">
-        <h2>About Browsabler</h2>
-        <p>Simple app responsible for cutting URLs from the shared text and given files.</p>
-    </section>
+        <section id="about" class="mt-4">
+            <h2>About Browsabler</h2>
+            <p>Simple app responsible for cutting URLs from the shared text and given files.</p>
+        </section>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email us at: <a href="mailto:ogiback@gmail.com">ogiback@gmail.com</a></p>
-    </section>
+        <section id="contact" class="mt-4">
+            <h2>Contact</h2>
+            <p>Email us at: <a href="mailto:ogiback@gmail.com">ogiback@gmail.com</a></p>
+        </section>
+    </div>
 
-    <footer>
+    <footer class="mt-4">
         <p>&copy; 2024 Browsabler Project</p>
     </footer>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
