--- a/browsabler/index.html
+++ b/browsabler/index.html
@@ -28,12 +28,12 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="browsabler" alt="Browsabler Logo" style="max-width: 30px; height: auto;"> Browsabler
+            <img src="browsabler.png" alt="Browsabler Logo" style="max-width: 30px; height: auto;"> Browsabler
         </a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="#privacypolicy">Privacy Policy</a></li>
-                <li class="nav-item"><a class="nav-link" href="#termsandconditions">Terms & Conditions</a></li>
+                <li class="nav-item"><a class="nav-link" href="privacypolicy">Privacy Policy</a></li>
+                <li class="nav-item"><a class="nav-link" href="termsandconditions">Terms & Conditions</a></li>
             </ul>
         </div>
     </nav>
