--- a/browsabler/index.html
+++ b/browsabler/index.html
@@ -2,64 +2,89 @@
 <html>
 <head>
     <title>Browsabler Project</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        .top-section {
+            background: #f4f4f4;
+            text-align: center;
+        }
+
         .top-section img {
-            max-width: 100px; /* Adjust as needed */
+            max-width: 100px;
             height: auto;
+        }
+
+        header {
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        .content {
+            flex: 1;
         }
 
         footer {
             background: #f4f4f4;
             text-align: center;
             padding: 10px 0;
-            position: relative; /* Changed from 'fixed' to 'relative' for better layout with Bootstrap */
-            width: 100%;
-        }
-
-        footer p {
-            margin: 0;
         }
     </style>
 </head>
 <body>
-    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-            <img src="browsabler.png" alt="Browsabler Logo" style="max-width: 30px; height: auto;"> Browsabler
-        </a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="privacypolicy">Privacy Policy</a></li>
-                <li class="nav-item"><a class="nav-link" href="termsandconditions">Terms & Conditions</a></li>
+        <a class="navbar-brand" href="#">Browsabler</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="privacypolicy">Privacy Policy</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="termsandconditions">Terms & Conditions</a>
+                </li>
             </ul>
         </div>
     </nav>
 
-    <div class="container mt-4">
-        <header class="text-center">
+    <div class="content">
+        <div class="top-section">
+            <img src="browsabler.png" alt="Browsabler Logo">
+            <h1>Browsabler</h1>
+        </div>
+
+        <header>
             <h1>Welcome to Browsabler</h1>
         </header>
 
-        <section id="about" class="mt-4">
+        <section id="about">
             <h2>About Browsabler</h2>
             <p>Simple app responsible for cutting URLs from the shared text and given files.</p>
         </section>
 
-        <section id="contact" class="mt-4">
+        <section id="contact">
             <h2>Contact</h2>
             <p>Email us at: <a href="mailto:ogiback@gmail.com">ogiback@gmail.com</a></p>
         </section>
     </div>
 
-    <footer class="mt-4">
+    <footer>
         <p>&copy; 2024 Browsabler Project</p>
     </footer>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- Bootstrap JS and jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
