--- a/browsabler/index.html
+++ b/browsabler/index.html
@@ -6,18 +6,12 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
+            padding-top: 70px; /* Added padding to ensure the top section is not covered by the navbar */
         }
 
         .top-section {
-            background: #f4f4f4;
             text-align: center;
+            padding-bottom: 30px;
         }
 
         .top-section img {
@@ -25,13 +19,9 @@
             height: auto;
         }
 
-        header {
-            padding: 20px 0;
-            text-align: center;
-        }
-
-        .content {
-            flex: 1;
+        .content-section {
+            padding: 40px 0; /* Increased padding for more separation */
+            border-bottom: 1px solid #ddd;
         }
 
         footer {
@@ -39,54 +29,46 @@
             text-align: center;
             padding: 10px 0;
         }
+
+        .fixed-bottom {
+            left: 0;
+            right: 0;
+        }
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Browsabler</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="privacypolicy">Privacy Policy</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="termsandconditions">Terms & Conditions</a>
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Browsabler</a>
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="privacypolicy">Privacy Policy</a></li>
+                    <li class="nav-item"><a class="nav-link" href="termsandconditions">Terms & Conditions</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
 
-    <div class="content">
+    <div class="container">
         <div class="top-section">
             <img src="browsabler.png" alt="Browsabler Logo">
             <h1>Browsabler</h1>
         </div>
 
-        <header>
-            <h1>Welcome to Browsabler</h1>
-        </header>
-
-        <section id="about">
+        <section id="about" class="content-section">
             <h2>About Browsabler</h2>
-            <p>Simple app responsible for cutting URLs from the shared text and given files.</p>
+            <p>Browsabler is a dynamic and user-friendly application designed to enhance your browsing experience. This innovative tool specializes in efficiently extracting URLs from any text or plain text file you provide. Whether you're dealing with lengthy web addresses in raw documents or sifting through substantial text data, Browsabler simplifies the process, neatly cutting out every URL and presenting them in an organized manner, saving you time and effort in your digital interactions.</p>
         </section>
 
-        <section id="contact">
+        <section id="contact" class="content-section">
             <h2>Contact</h2>
             <p>Email us at: <a href="mailto:ogiback@gmail.com">ogiback@gmail.com</a></p>
         </section>
+        
     </div>
 
-    <footer>
+    <footer class="fixed-bottom">
         <p>&copy; 2024 Browsabler Project</p>
     </footer>
-
-    <!-- Bootstrap JS and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
